[package]
name = "assert2ify"
version = "0.1.0"
authors = ["geo-ant <54497890+geo-ant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["assert2ify-macros"]

[dependencies]
assert2ify-macros = {path="./assert2ify-macros", version = "0.1.0"}
assert2 = "0.3"
