[package]
name = "assert2ify"
version = "0.1.0-alpha1"
authors = ["geo-ant <geos.blog@posteo.de>"]
edition = "2018"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["assert2ify-macros"]

[dependencies]
assert2ify-macros = {path="./assert2ify-macros", version = "0.1.0-alpha1"}
assert2 = "0.3"

[dev-dependencies]
paste = "1.0"