[package]
name = "assert2-ify-macros"
version = "0.1.0"
authors = ["geo-ant <54497890+geo-ant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = {version = "1.0"}
