[package]
name = "assert2ify-macros"
version = "0.1.0-alpha1"
authors = ["geo-ant <geos.blog@posteo.de>"]
edition = "2018"
license = "BSD-2-Clause"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = {version = "1.0", features = ["full", "fold", "extra-traits"]}
