[package]
name = "assert2ify-macros"
version = "0.1.0-alpha1"
authors = ["geo-ant <geos.blog@posteo.de>"]
edition = "2018"
homepage = "https://github.com/geo-ant/assert2ify"
repository = "https://github.com/geo-ant/assert2ify"
categories = ["development-tools::testing","development-tools::debugging"]
description = "Macros for the assert2ify crate"
keywords = ["assert2","assert","assertion","check","match"]
license = "BSD-2-Clause"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = {version = "1.0", features = ["full", "fold", "extra-traits"]}
